force-app/main/default/objects/Study__c/Study__c.object-meta.xml
<CustomObject>
    <label>Study</label>
    <nameField>
        <label>Study Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>