force-app/main/default/objects/Study__c/fields/Additional_Reconductoring_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reconductoring_Costs__c</fullName>
    <label>Additional Reconductoring Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>