force-app/main/default/objects/Study__c/fields/Agreement_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Invoice_Received__c</fullName>
    <inlineHelpText>Date Agreement &amp; Invoice is received from utility</inlineHelpText>
    <label>Agreement &amp; Invoice Received</label>
    <type>Date</type>
</CustomField>