force-app/main/default/objects/Study__c/fields/Agreement_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Payment_Due__c</fullName>
    <inlineHelpText>Date agreement &amp; payment due to utility</inlineHelpText>
    <label>Agreement &amp; Payment Due</label>
    <type>Date</type>
</CustomField>