force-app/main/default/objects/Study__c/fields/Agreement_Payment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Payment_Paid__c</fullName>
    <label>Agreement &amp; Payment Paid</label>
    <type>Date</type>
</CustomField>