force-app/main/default/objects/Study__c/fields/Conclusions__c.field-meta.xml
<CustomField>
    <fullName>Conclusions__c</fullName>
    <label>Conclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>