force-app/main/default/objects/Study__c/fields/Date_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Report_Received__c</fullName>
    <label>Draft Report Received</label>
    <type>Date</type>
</CustomField>