force-app/main/default/objects/Study__c/fields/Executed_Agreement_Payment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Executed_Agreement_Payment_Sent__c</fullName>
    <description>ility</description>
    <label>Executed Agreement &amp; Payment Sent</label>
    <type>Date</type>
</CustomField>