force-app/main/default/objects/Study__c/fields/Extension_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Extension_Payment_Due__c</fullName>
    <inlineHelpText>Date extension payment due to utility</inlineHelpText>
    <label>Extension Payment Due</label>
    <type>Date</type>
</CustomField>