force-app/main/default/objects/Study__c/fields/Extension_Payment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Extension_Payment_Sent__c</fullName>
    <inlineHelpText>Date extension payment was sent</inlineHelpText>
    <label>Extension Payment Sent</label>
    <type>Date</type>
</CustomField>