force-app/main/default/objects/Study__c/fields/Final_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Received__c</fullName>
    <label>Final Report Received</label>
    <type>Date</type>
</CustomField>