force-app/main/default/objects/Study__c/fields/IC_Amount__c.field-meta.xml
<CustomField>
    <fullName>IC_Amount__c</fullName>
    <label>IC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>