force-app/main/default/objects/Study__c/fields/IC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>IC_Approval_Status__c</fullName>
    <label>IC Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>