force-app/main/default/objects/Study__c/fields/IC_Date__c.field-meta.xml
<CustomField>
    <fullName>IC_Date__c</fullName>
    <label>IC Date</label>
    <type>Date</type>
</CustomField>