force-app/main/default/objects/Study__c/fields/IC_Memo__c.field-meta.xml
<CustomField>
    <fullName>IC_Memo__c</fullName>
    <label>IC Memo</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>