force-app/main/default/objects/Study__c/fields/Point_of_Common_Coupling_Costs__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Common_Coupling_Costs__c</fullName>
    <label>Point of Common Coupling Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>