force-app/main/default/objects/Study__c/fields/Preferred_Option__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Study option chosen</description>
    <label>Preferred Option</label>
    <type>Checkbox</type>
</CustomField>