force-app/main/default/objects/Study__c/fields/Recloser_Costs__c.field-meta.xml
<CustomField>
    <fullName>Recloser_Costs__c</fullName>
    <label>Recloser Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>