force-app/main/default/objects/Study__c/fields/Reconductoring_Costs__c.field-meta.xml
<CustomField>
    <fullName>Reconductoring_Costs__c</fullName>
    <label>Reconductoring Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>