force-app/main/default/objects/Study__c/fields/Study_Author__c.field-meta.xml
<CustomField>
    <fullName>Study_Author__c</fullName>
    <label>Study Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>