force-app/main/default/objects/Study__c/fields/Study_Author_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Study_Author_Contact_Info__c</fullName>
    <label>Study Author Contact Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>