force-app/main/default/objects/Study__c/fields/Study_Begins_Act__c.field-meta.xml
<CustomField>
    <fullName>Study_Begins_Act__c</fullName>
    <label>Study Begins Act</label>
    <type>Date</type>
</CustomField>