force-app/main/default/objects/Study__c/fields/Study_Begins_Est__c.field-meta.xml
<CustomField>
    <fullName>Study_Begins_Est__c</fullName>
    <description>Date utility begins work on study</description>
    <label>Study Begins Est</label>
    <type>Date</type>
</CustomField>