force-app/main/default/objects/Study__c/fields/Study_Cost__c.field-meta.xml
<CustomField>
    <fullName>Study_Cost__c</fullName>
    <label>Study Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>