force-app/main/default/objects/Study__c/fields/Study_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Type__c</fullName>
    <label>Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20-50BD Review</fullName>
            </value>
            <value>
                <fullName>ASO Study</fullName>
            </value>
            <value>
                <fullName>Combined (Feasibility +SIS)</fullName>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
            <value>
                <fullName>Diligence Report</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Feasibility</fullName>
            </value>
            <value>
                <fullName>Group Study</fullName>
            </value>
            <value>
                <fullName>Restudy</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
            <value>
                <fullName>System Impact</fullName>
            </value>
            <value>
                <fullName>Transmission Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>