force-app/main/default/objects/Study__c/fields/Substation_Upgrade_Costs__c.field-meta.xml
<CustomField>
    <fullName>Substation_Upgrade_Costs__c</fullName>
    <label>Substation Upgrade Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>