force-app/main/default/objects/Study__c/fields/System_Upgrade_Cost_Est__c.field-meta.xml
<CustomField>
    <fullName>System_Upgrade_Cost_Est__c</fullName>
    <label>System Upgrade Cost Est</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>