force-app/main/default/objects/Study__c/fields/Transmission_Upgrade_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Upgrade_Cost__c</fullName>
    <label>Transmission Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>