force-app/main/default/objects/Study__c/fields/Utility_Completed_Study__c.field-meta.xml
<CustomField>
    <fullName>Utility_Completed_Study__c</fullName>
    <label>Utility Completed Study</label>
    <type>Date</type>
</CustomField>