force-app/main/default/objects/Study__c/fields/Witness_Test_Costs__c.field-meta.xml
<CustomField>
    <fullName>Witness_Test_Costs__c</fullName>
    <label>Witness Test Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>